# uart-log-viewer

./: .gitignore  INSTALL.md  README.md
.github/workflows/: build.yml
cpp/: CMakeLists.txt
cpp/resources/: uart-log-viewer.desktop
cpp/src/: finddialog.cpp  finddialog.h  mainwindow.cpp  mainwindow.h  serialtab.cpp  serialtab.h  timezonedialog.cpp  timezonedialog.h
legacy/: build-mac.sh  build-win.ps1
scripts/: build-deb.sh  build-qt-linux-appimage-ubuntu20.sh  build-qt-linux-appimage.sh  build-qt-linux.sh  build-qt-mac.sh  build-qt-win.ps1  installer-win-qt.iss  installer-win.iss
src/: uart_tabs.py
